--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  
+  
 }
 
 .App-logo {
@@ -11,6 +13,39 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content: center;
+  margin:0 auto;
+  font-size: 70px;
+  margin-top: 120px;
+
+}
+button{
+  text-align: center;
+  width:100px;
+  height:40px;
+  border-radius: 5%;
+  border:none;
+  font-size:25px;
+  font-family: 'Times New Roman', Times, serif;
+  background-color: #282c34;
+  color:#fff;
+}
+
+button:not(:first-child){
+  margin-left: 30px;
+}
+
+.buttons{
+  display: flex;
+  flex-direction: row;
+  margin-top:50px;
+  
 }
 
 .App-header {
